# ohw25_proj_BluRaspberry

./: .gitignore  .gitmodules  README.md  pixi.toml
contributor_folders/ELine/: README.md
contributor_folders/ELine/ocean_wrapper_ws/src/mock_uuv/: package.xml  setup.cfg  setup.py
contributor_folders/ELine/ocean_wrapper_ws/src/ocean_score_wrapper/: package.xml  setup.cfg  setup.py
contributor_folders/ELine/ocean_wrapper_ws/src/ros-messages-88/: CMakeLists.txt  README.md  package.xml
contributor_folders/ELine/ocean_wrapper_ws/src/ros-messages-88/action/: Explore.action  FindPath.action  NavToPoint.action
contributor_folders/ELine/ocean_wrapper_ws/src/ros-messages-88/msg/: Battery.msg  Frontier.msg  FrontierList.msg  SpeciesImageSegment.msg  TaskStatus.msg
contributor_folders/ELine/ocean_wrapper_ws/src/ros-messages-88/srv/: Emergency.srv  Geopoint.srv  GetFrontiers.srv  GetMapData.srv  GetOceanScore.srv  InitDroneState.srv  RecordVideo.srv  RequestGoal.srv  RequestPath.srv  SpeciesCsv.srv  SpeciesHeatmap.srv
contributor_folders/JCai/: ScoreFunction_Ocean.ipynb  Untitled.ipynb  feed_O2_age.ipynb  o2score.py
contributor_folders/JCai/.ipynb_checkpoints/: ScoreFunction_Ocean-checkpoint.ipynb
contributor_folders/team_member_cbps/: load_copernicus_data.ipynb
contributor_folders/team_member_cbps/copernicus-data/: cmems_mod_glo_phy-so_anfc_0.083deg_P1D-m_subset.nc  cmems_mod_glo_phy-thetao_anfc_0.083deg_P1D-m_subset.nc
contributor_folders/team_member_kayla/: hackweek_slides_bluR.pptx
final_notebooks/: Prep_OCIM_vis.ipynb
(+5 files in other folders)
